@@ -268,7 +268,7 @@
       <component name="bug-buddy" dir="bug-buddy" group="desktop">
         <podir dir="po"/>
         <potname name="bug-buddy.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -354,7 +354,7 @@
       <component name="dasher" dir="dasher" group="desktop">
         <podir dir="po"/>
         <potname name="dasher.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -374,7 +374,7 @@
       <component name="deskbar-applet" dir="deskbar-applet" group="desktop">
         <podir dir="po"/>
         <potname name="deskbar-applet.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -460,7 +460,7 @@
       <component name="eel" dir="eel" group="desktop">
         <podir dir="po"/>
         <potname name="eel-2.0.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -511,7 +511,7 @@
       <component name="eog" dir="eog" group="desktop">
         <podir dir="po"/>
         <potname name="eog.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -531,7 +531,7 @@
       <component name="epiphany" dir="epiphany" group="desktop">
         <podir dir="po"/>
         <potname name="epiphany.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -562,7 +562,7 @@
       <component name="evince" dir="evince" group="desktop">
         <podir dir="po"/>
         <potname name="evince.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -582,7 +582,7 @@
       <component name="evolution" dir="evolution" group="desktop">
         <podir dir="po"/>
         <potname name="evolution-2.8.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -613,7 +613,7 @@
       <component name="evolution-data-server" dir="evolution-data-server" group="desktop">
         <podir dir="po"/>
         <potname name="evolution-data-server-1.8.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -633,7 +633,7 @@
       <component name="evolution-exchange" dir="evolution-exchange" group="desktop">
         <podir dir="po"/>
         <potname name="evolution-exchange-2.8.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -715,7 +715,7 @@
       <component name="file-roller" dir="file-roller" group="desktop">
         <podir dir="po"/>
         <potname name="file-roller.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -777,7 +777,7 @@
       <component name="gcalctool" dir="gcalctool" group="desktop">
         <podir dir="po"/>
         <potname name="gcalctool.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -828,7 +828,7 @@
       <component name="gconf-editor" dir="gconf-editor" group="desktop">
         <podir dir="po"/>
         <potname name="gconf-editor.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -881,7 +881,7 @@
       <component name="gdm2" dir="gdm2" group="desktop">
         <podir dir="po"/>
         <potname name="gdm.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -901,7 +901,7 @@
       <component name="gedit" dir="gedit" group="desktop">
         <podir dir="po"/>
         <potname name="gedit.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -1148,14 +1148,14 @@
       <component name="gnome-applets" dir="gnome-applets" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-applets-2.0.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
       <component name="gnome-applets-locations" dir="gnome-applets" group="desktop">
         <podir dir="po-locations"/>
         <potname name="gnome-applets-2.0.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
       </component>
     </version>
@@ -1229,7 +1229,7 @@
       <component name="gnome-control-center" dir="gnome-control-center" group="desktop">
         <podir dir="po"/>
         <potname name="control-center-2.0.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -1269,7 +1269,7 @@
       <component name="gnome-desktop" dir="gnome-desktop" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-desktop-2.0.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -1289,7 +1289,7 @@
       <component name="gnome-doc-utils" dir="gnome-doc-utils" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-doc-utils.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -1309,7 +1309,7 @@
       <component name="gnome-games" dir="gnome-games" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-games.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -1349,7 +1349,7 @@
       <component name="gnome-icon-theme" dir="gnome-icon-theme" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-icon-theme.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -1400,7 +1400,7 @@
       <component name="gnome-keyring-manager" dir="gnome-keyring-manager" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-keyring-manager.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -1471,7 +1471,7 @@
       <component name="gnome-menus" dir="gnome-menus" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-menus.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -1522,7 +1522,7 @@
       <component name="gnome-nettool" dir="gnome-nettool" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-nettool.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -1575,7 +1575,7 @@
       <component name="gnome-panel" dir="gnome-panel" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-panel-2.0.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -1641,7 +1641,7 @@
       <component name="gnome-power-manager" dir="gnome-power-manager" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-power-manager.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -1672,7 +1672,7 @@
       <component name="gnome-screensaver" dir="gnome-screensaver" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-screensaver.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -1692,7 +1692,7 @@
       <component name="gnome-session" dir="gnome-session" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-session-2.0.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -1754,7 +1754,7 @@
       <component name="gnome-terminal" dir="gnome-terminal" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-terminal.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -1774,7 +1774,7 @@
       <component name="gnome-themes" dir="gnome-themes" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-themes.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -1827,7 +1827,7 @@
       <component name="gnome-utils" dir="gnome-utils" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-utils-2.0.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -1847,7 +1847,7 @@
       <component name="gnome-vfs" dir="gnome-vfs" group="developer-libs">
         <podir dir="po"/>
         <potname name="gnome-vfs-2.0.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -2094,7 +2094,7 @@
       <component name="gtkhtml" dir="gtkhtml" group="desktop">
         <podir dir="po"/>
         <potname name="gtkhtml-3.8.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -2242,7 +2242,7 @@
       <component name="libbonobo" dir="libbonobo" group="developer-libs">
         <podir dir="po"/>
         <potname name="libbonobo-2.0.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -2315,7 +2315,7 @@
       <component name="libgnome" dir="libgnome" group="developer-libs">
         <podir dir="po"/>
         <potname name="libgnome-2.0.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -2428,7 +2428,7 @@
       <component name="libgnomeui" dir="libgnomeui" group="developer-libs">
         <podir dir="po"/>
         <potname name="libgnomeui-2.0.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -2576,7 +2576,7 @@
       <component name="metacity" dir="metacity" group="desktop">
         <podir dir="po"/>
         <potname name="metacity.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -2725,7 +2725,7 @@
       <component name="nautilus" dir="nautilus" group="desktop">
         <podir dir="po"/>
         <potname name="nautilus.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -2756,7 +2756,7 @@
       <component name="nautilus-cd-burner" dir="nautilus-cd-burner" group="desktop">
         <podir dir="po"/>
         <potname name="nautilus-cd-burner.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -2901,7 +2901,7 @@
       <component name="orca" dir="orca" group="desktop">
         <podir dir="po"/>
         <potname name="orca.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -2978,7 +2978,7 @@
       <component name="gnome-system-monitor" dir="gnome-system-monitor" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-system-monitor.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -3195,7 +3195,7 @@
       <component name="tomboy" dir="tomboy" group="desktop">
         <podir dir="po"/>
         <potname name="tomboy.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -3215,7 +3215,7 @@
       <component name="totem" dir="totem" group="desktop">
         <podir dir="po"/>
         <potname name="totem.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -3259,7 +3259,7 @@
       <component name="vino" dir="vino" group="desktop">
         <podir dir="po"/>
         <potname name="vino.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -3330,7 +3330,7 @@
       <component name="zenity" dir="zenity" group="desktop">
         <podir dir="po"/>
         <potname name="zenity.pot"/>
-        <branch name="gnome-2-16"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
