@@ -1,3 +1,7 @@
+2006-12-10  Danilo Šegan  <danilo@gnome.org>
+
+	* translation-status.xml: Updated for 2.18.
+
 2006-11-28  Wouter Bolsterlee  <wbolster@cvs.gnome.org>
 
 	* translation-status.xml: bug-buddy has branched for
